Improve post and fix copy button alignment (#129)

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -62,6 +62,12 @@
 .conum[data-value] + b {
     display: none;
 }
+.clipboard-copy-button {
+    right: 5.5em;
+}
+.clipboard-copy-button > span {
+    margin-left: 1.2em;
+}
 .highlight {
     padding: 20px;
 }
